feat: updated dependencies